--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
+    hrllo
     <div class="container">
         <h1>Welcome to Flask</h1>
         <p>This is a basic Flask template</p>
